<resources>
    <string name="app_name">True Shuffle</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="restrict">Limited</string>
    <string name="ten">10</string>
    <string name="shuffle_playlist">Shuffle</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>