<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:rowCount="3">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_rowWeight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <GridLayout
                android:id="@+id/playlist_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:scrollbars="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="2dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/shuffle_playlist"
                    android:textSize="26sp"
                    android:visibility="gone" />
            </GridLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="0"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="0"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:text="@string/previous"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/next"
            android:visibility="gone" />
    </LinearLayout>
</GridLayout>